--- a/jelly/app/(root)/(home)/Score/[id]/style.module.css
+++ b/jelly/app/(root)/(home)/Score/[id]/style.module.css
@@ -6,3 +6,24 @@
   width: 90%;
   margin: 0 auto;
 }
+
+.flexW70 {
+  width: 68%;
+}
+
+.flexWHalf {
+  width: 48%;
+}
+
+.flexW30 {
+  width: 30%;
+}
+
+.goal {
+  font-size: 120px;
+  font-weight: 900;
+  color: #fff;
+  margin: 0;
+  padding: 0;
+  line-height: 100%;
+}
