--- a/jelly/app/(root)/(home)/Team/[id]/TeamSmy/style.module.css
+++ b/jelly/app/(root)/(home)/Team/[id]/TeamSmy/style.module.css
@@ -13,11 +13,11 @@
 }
 
 .topContent__inner__img {
-  width: 150px;
-  height: 150px;
-  border-radius: 150px;
+  width: 200px;
+  height: 200px;
+  border-radius: 200px;
   background: #000;
-  margin: 0 100px 0 0;
+  margin: 0 50px 0 0;
 }
 
 .topContent__inner__smy {
@@ -25,8 +25,9 @@
 }
 
 .topContent__inner__smy__team {
-  font-size: 20px;
-  margin: 20px 0;
+  font-size: 32px;
+  font-weight: 900;
+  margin: 20px 0 0 0;
 }
 
 .topContent__inner__smy__data__flex {
@@ -36,26 +37,26 @@
 }
 
 .topContent__inner__smy__data__flex__wl p {
-  font-size: 12px;
+  font-size: 20px;
   font-weight: 900;
 }
 
 .topContent__inner__smy__data__flex__wl span {
-  font-size: 24px;
-  margin: auto 3px;
+  font-size: 48px;
+  margin: auto 5px;
 }
 
 .topContent__inner__smy__data__flex__category {
-  font-size: 12px;
-  padding: 0 40px;
+  font-size: 18px;
+  padding: 0 20px 0  0;
   position: relative;
-  bottom: 0;
+  top: 16px;
 }
 
 .topContent__inner__smy__data__flex__category p {
-  font-size: 12px;
+  font-size: 18px;
   position: relative;
-  top: 10px;
+  top: 17px;
 }
 
 .topContent__inner__smy__data__border {
@@ -76,13 +77,13 @@
 }
 
 .topContent__inner__smy__data__flexSmy dl dt {
-  font-size: 12px;
+  font-size: 18px;
   margin-right: 10px;
   position: relative;
-  top: 5px;
+  top: 14px;
 }
 
 .topContent__inner__smy__data__flexSmy dl dd {
-  font-size: 18px;
+  font-size: 32px;
   font-weight: 900;
 }
